fixing htlm redering issues on mobile phone

--- a/themes/hugo-theme-learn/static/css/hugo-theme.css
+++ b/themes/hugo-theme-learn/static/css/hugo-theme.css
@@ -50,7 +50,8 @@ body {
 }
 .progress {
     position:absolute;
-    background-color: rgba(246, 246, 246, 0.97);
+    /* background-color: rgba(246, 246, 246, 0.97); */
+    background-color: #303030;
     width: auto;
     border: thin solid #ECECEC;
     display:none;
